Fixed spacing of cards

--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,8 @@
 body {
     margin: 0px;
     font-family: 'Quicksand';
+    background-color: #7c7c7c;
+    color: #ffffff;
 }
 
 #root {
@@ -49,4 +51,46 @@ a {
     text-decoration: none;
     color: #66fcf1;
     font-size: x-large;
+}
+
+.box {
+    display: flex;
+    min-height: 60%;
+    max-width: 100%;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 3%;
+    flex-wrap: wrap;
+}
+
+.column{
+    display: flex;
+    flex-direction: column;
+}
+
+.projectLabel {
+    position: relative;
+    font-size: xx-large;
+    right: 
+}
+
+.projects {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 80%;
+}
+
+.Card {
+    display: flex;
+    width: 48%;
+    padding-top: 3%;
+}
+
+img { 
+    width: 100%;
+    object-fit: cover;
+    border-style: solid;
+    border-color: #ffffff;
+    border-width: 2px;
 }
